# camoufox-cli

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
cli/: Cargo.toml
cli/src/: commands.rs  connection.rs  main.rs  output.rs
js/: LICENSE  package.json  pnpm-lock.yaml
js/src/: browser.ts  cli.ts  commands.ts  daemon.ts  proxy.ts  server.ts  types.ts
js/tests/: browser.test.ts  cli.test.ts  commands.test.ts  e2e.test.ts  protocol.test.ts  proxy.test.ts  refs.test.ts  server.test.ts
skills/camoufox-cli/: SKILL.md
skills/camoufox-cli/references/: commands.md
src/camoufox_cli/: __main__.py  browser.py  cli.py  commands.py  proxy.py  server.py
src/cfox/: __main__.py  browser.py  commands.py  protocol.py  refs.py  server.py
tests/: test_cli.py  test_e2e.py  test_proxy.py
