[project]
name = "camoufox-cli"
version = "0.3.0"
description = "Anti-detect browser CLI & Skills for AI agents, powered by Camoufox"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Benn Huang" }]
readme = "README.md"
keywords = ["browser", "automation", "anti-detect", "camoufox", "ai-agent", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "camoufox[geoip]",
    "playwright",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/Bin-Huang/camoufox-cli"
Repository = "https://github.com/Bin-Huang/camoufox-cli"
Issues = "https://github.com/Bin-Huang/camoufox-cli/issues"

[project.scripts]
camoufox-cli = "camoufox_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_cli"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that launch a real browser (slow, requires camoufox)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
